build inicial do codigo, correção no data.sql